--- a/public/global.css
+++ b/public/global.css
@@ -9,4 +9,15 @@
   @apply visible z-50;
 }
 
+.btn {
+  @apply font-bold py-2 px-4 rounded;
+}
+
+.btn-blue {
+  @apply bg-blue-500 text-white;
+}
+.btn-blue:hover {
+  @apply bg-blue-700;
+}
+
 @tailwind utilities;
