--- a/public/global.css
+++ b/public/global.css
@@ -5,12 +5,20 @@
   @apply invisible absolute;
 }
 
+.tooltip:hover {
+  @apply visible z-50;
+}
+
 .has-tooltip:hover .tooltip {
   @apply visible z-50;
 }
 
+.has-tooltip-sibling:hover + .tooltip {
+  @apply visible z-50;
+}
+
 .btn {
-  @apply font-bold py-2 px-4 rounded;
+  @apply font-bold py-1.5 px-2.5 rounded;
 }
 
 .btn-blue {
